CppReact's dependencies "googletest" and "tbb" are added via submodules

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,18 +1,9 @@
-### Configuration
-if(DEFINED ENV{GTEST_DIR})
-	message("Using gtest found in $ENV{GTEST_DIR}.")
-else()
-	message("GTEST_DIR is not defined. You must tell CMake where to find the gtest source.")
-	return()
-endif()
-add_subdirectory($ENV{GTEST_DIR} ${CMAKE_CURRENT_BINARY_DIR}/gtest)
-
 ### CppReactTest
 add_executable(CppReactTest
 	src/algorithm_tests.cpp
 	src/common_tests.cpp
 	src/event_tests.cpp
-	src/observer_tests.cpp
+	src/observer_test.cpp
 	src/state_tests.cpp
 	src/transaction_tests.cpp)
 
