--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 ### Configuration
-cmake_minimum_required (VERSION 2.6)
+cmake_minimum_required (VERSION 3.7)
 
 project (CppReact)
 
@@ -7,9 +7,11 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wpedantic")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wpedantic")
 
 include_directories ("${PROJECT_SOURCE_DIR}/include")
+
+add_subdirectory(deps)
 
 ### CppReact
 add_library(CppReact 
@@ -19,7 +21,9 @@ add_library(CppReact
 	src/logging/EventLog.cpp
 	src/logging/EventRecords.cpp)
 
-target_link_libraries(CppReact tbb)
+target_compile_features(CppReact PUBLIC cxx_std_11)
+
+target_link_libraries(CppReact tbb_static)
 
 ### examples/ 
 option(build_examples "Build examples?" ON)
