Port tests from gtest to doctest

--- a/tests/src/CMakeLists.txt
+++ b/tests/src/CMakeLists.txt
@@ -1,10 +1,13 @@
 ### CppReactTest
 add_executable(
     CppReactTest
+    main.cpp
     EventStreamTest.cpp
     ObserverTest.cpp
     OperationsTest.cpp
     SignalTest.cpp
 )
 
-target_link_libraries(CppReactTest CppReact gtest gtest_main cppreact::doctest)
+target_link_libraries(CppReactTest CppReact cppreact::doctest)
+
+target_compile_options(CppReactTest PRIVATE ${CPPREACT_WARNING_OPTION})
